Felles 3.2 ny prosesstask rydde abac og feil